[package]
name = "base"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#anyhow = "1.0"
#thiserror = "1.0"
log = { workspace = true }
fern = { version = "0.6", features = ["date-based", "colored"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.36", features = ["full"] }
dashmap = "5.5"
bytes = "1.5"
once_cell = "1.19.0"
serde = { version = "1", features = ["derive"] }
#serde_derive = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
constructor = { path = "../macros/constructor" }
cfg_lib = { path = "../macros/cfg_lib" }
exception = { path = "../exception" }
#ctrlc = "3.4"
#nix = {version = "0.29",features = ["fs","signal"]}
#libc = "0.2"
#加解密
aes = "0.7.5"
block-modes = "0.8.1"
#hex-literal = "0.2.1"
rand = "0.8.4"
bytebuffer = "0.2.1"
base64 = "0.22"
ctor = "0.2"
hex = "0.4"
sha2 = "0.10"
tokio-util = "0.7"

# Unix-like 系统（Linux + macOS）
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
daemonize = "0.5"
users = "0.11"
## Windows 特有依赖
#[target.'cfg(target_os = "windows")'.dependencies]
#windows-service = "0.8.0"
[dev-dependencies]
serde_json = "1.0.124"

[features]
default = []
net = []