[package]
name = "base_rpc"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
base = { path = "../base" }
thiserror = { workspace = true }
tonic = { version = "0.14", features = ["transport", "tls-ring", "tls-native-roots"] }
#tower = { version = "0.5", features = ["limit", "timeout", "util"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
